--- a/msvc/ModelMaker.vcxproj
+++ b/msvc/ModelMaker.vcxproj
@@ -37,6 +37,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IntDir>$(Configuration)\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>true</LinkIncremental>
@@ -44,7 +45,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
@@ -59,7 +60,7 @@
       </AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>lib /NOLOGO /OUT:"$(TargetPath).lib" "$(ProjectDir)\$(Configuration)\*.obj"</Command>
+      <Command>lib /NOLOGO /OUT:"$(TargetPath).lib" "$(ProjectDir)\$(Configuration)\$(ProjectName)\*.obj"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -86,7 +87,6 @@
     <ClCompile Include="..\src\json\util.cpp" />
     <ClCompile Include="..\src\json\vector_value.cpp" />
     <ClCompile Include="..\src\main.cpp" />
-    <ClCompile Include="..\util\runner.cpp" />
     <ClCompile Include="..\util\status.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -97,14 +97,6 @@
     <ClInclude Include="..\src\json\simple_values.h" />
     <ClInclude Include="..\src\json\util.h" />
     <ClInclude Include="..\src\json\vector_value.h" />
-    <ClInclude Include="..\tests\element_test.h" />
-    <ClInclude Include="..\tests\extract_json_test.h" />
-    <ClInclude Include="..\tests\json\json_test.h" />
-    <ClInclude Include="..\tests\json\object_values_test.h" />
-    <ClInclude Include="..\tests\json\simple_values_test.h" />
-    <ClInclude Include="..\tests\json\util_test.h" />
-    <ClInclude Include="..\tests\json\vector_value_test.h" />
-    <ClInclude Include="..\tests\status_test.h" />
     <ClInclude Include="..\util\status.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
