test_runner -> runner.cpp

--- a/msvc/ModelMakerTest.vcxproj
+++ b/msvc/ModelMakerTest.vcxproj
@@ -99,7 +99,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\util\test_runner.cpp" />
+    <ClCompile Include="..\util\runner.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
