--- a/msvc/ModelMakerTest.vcxproj
+++ b/msvc/ModelMakerTest.vcxproj
@@ -55,7 +55,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_HAS_EXCEPTIONS=0;WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <ExceptionHandling>false</ExceptionHandling>
+      <ExceptionHandling>Sync</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -85,19 +85,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\tests\test_element.cpp" />
-    <ClCompile Include="..\tests\json\test_json_extract.cpp" />
-    <ClCompile Include="..\tests\json\test_json_object_value.cpp" />
-    <ClCompile Include="..\tests\json\test_json_values.cpp" />
     <ClCompile Include="..\tests\json\test_json.cpp" />
-    <ClCompile Include="..\tests\json\test_json_util.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
-      <FileType>CppHeader</FileType>
-    </ClCompile>
-    <ClCompile Include="..\tests\json\test_json_vector_value.cpp" />
-    <ClCompile Include="..\tests\test_status.cpp">
-      <FileType>CppHeader</FileType>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\util\runner.cpp" />
