--- a/msvc/ModelMaker.vcxproj
+++ b/msvc/ModelMaker.vcxproj
@@ -79,13 +79,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\json\json.cpp" />
+    <ClCompile Include="..\src\json\value.cpp" />
     <ClCompile Include="..\src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\element.h" />
     <ClInclude Include="..\src\json\extract.h" />
-    <ClInclude Include="..\src\json\json.h" />
+    <ClInclude Include="..\src\json\value.h" />
     <ClInclude Include="..\src\json\util.h" />
     <ClInclude Include="..\util\status.h" />
   </ItemGroup>
