--- a/msvc/ModelMakerTest.vcxproj
+++ b/msvc/ModelMakerTest.vcxproj
@@ -85,7 +85,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\tests\json\test_json.cpp" />
+    <ClCompile Include="..\tests\json\test_json_value.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\util\runner.cpp" />
