--- a/msvc/ModelMaker.vcxproj
+++ b/msvc/ModelMaker.vcxproj
@@ -79,11 +79,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\element.cpp" />
     <ClCompile Include="..\src\json\loader.cpp" />
     <ClCompile Include="..\src\json\value.cpp" />
     <ClCompile Include="..\src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\element.h" />
     <ClInclude Include="..\src\json\loader.h" />
     <ClInclude Include="..\src\json\value.h" />
   </ItemGroup>
