--- a/msvc/ModelMaker.vcxproj
+++ b/msvc/ModelMaker.vcxproj
@@ -79,15 +79,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\element.cpp" />
+    <ClCompile Include="..\src\json\iterator.cpp" />
+    <ClCompile Include="..\src\model.cpp" />
     <ClCompile Include="..\src\json\loader.cpp" />
     <ClCompile Include="..\src\json\value.cpp" />
     <ClCompile Include="..\src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\element.h" />
+    <ClInclude Include="..\src\json\iterator.h" />
     <ClInclude Include="..\src\json\loader.h" />
     <ClInclude Include="..\src\json\value.h" />
+    <ClInclude Include="..\src\model.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
