--- a/msvc/ModelMaker.vcxproj
+++ b/msvc/ModelMaker.vcxproj
@@ -79,6 +79,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\element.cpp" />
+    <ClCompile Include="..\src\face.cpp" />
     <ClCompile Include="..\src\json\iterator.cpp" />
     <ClCompile Include="..\src\model.cpp" />
     <ClCompile Include="..\src\json\loader.cpp" />
@@ -87,10 +89,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\element.h" />
+    <ClInclude Include="..\src\face.h" />
     <ClInclude Include="..\src\json\iterator.h" />
     <ClInclude Include="..\src\json\loader.h" />
     <ClInclude Include="..\src\json\value.h" />
     <ClInclude Include="..\src\model.h" />
+    <ClInclude Include="..\util\helper_macros.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
